# BSD 3-Clause License
# 
# Copyright (c) 2022, Stable Cloud Computing, Inc.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
# 
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
# 
# 3. Neither the name of the copyright holder nor the names of its
#    contributors may be used to endorse or promote products derived from
#    this software without specific prior written permission.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
package(default_visibility = ["//visibility:public"])

cc_binary(
	name = "syncclient",
	srcs = [
		"grpc_client.cc",
		"grpc_client.h",
	],
	defines = ["GRPC_CLIENT_MAIN"],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib",
		"@com_github_grpc_grpc//:grpc++",
		"//grpc/proto:scc_cc_grpc",
	]
)

cc_binary(
	name = "syncserv",
	srcs = [
		"main.cc",
		"server.h",
		"grpc_sync_server.h",
	],
	defines = ["GRPC_SYNC_SERV"],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib",
		":grpc_sync_serv",
	]
)

cc_binary(
	name = "asyncserv",
	srcs = [
		"main.cc",
		"server.h",
		"grpc_async_server.h",
	],
	defines = ["GRPC_ASYNC_SERV"],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib",
		":grpc_async_serv",
	]
)

cc_library(
	name = "grpc_sync_serv",
	srcs = [
		"grpc_sync_server.cc",
		"server.h",
		"grpc_sync_server.h",
	],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib",
		"@com_github_grpc_grpc//:grpc++",
		"@com_github_grpc_grpc//:grpc++_reflection",
		"//grpc/proto:scc_cc_grpc",
	]
)

cc_library(
	name = "grpc_async_serv",
	srcs = [
		"grpc_async_server.cc",
		"server.h",
		"grpc_async_server.h",
	],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_stablecc_scclib//util:sccutillib",
		"@com_github_grpc_grpc//:grpc++",
		"@com_github_grpc_grpc//:grpc++_reflection",
		"//grpc/proto:scc_cc_grpc",
	]
)

cc_test(
	name = "test_all",
	srcs = [
		"test.cc",
		"grpc_client.cc",
		"grpc_client.h",
		"server.h",
		"grpc_async_server.cc",
		"grpc_async_server.h",
		"grpc_sync_server.cc",
		"grpc_sync_server.h",
	],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_google_googletest//:gtest_main",
		"@com_stablecc_scclib//util:sccutillib",
		"@com_github_grpc_grpc//:grpc++",
		"@com_github_grpc_grpc//:grpc++_reflection",
		"//grpc/proto:scc_cc_grpc",
	]
)

cc_binary(
	name = "bench",
	srcs = [
		"bench.cc",
		"grpc_client.cc",
		"grpc_client.h",
		"server.h",
		"grpc_async_server.cc",
		"grpc_async_server.h",
		"grpc_sync_server.cc",
		"grpc_sync_server.h",
	],
	copts = ["-std=c++17"],
	linkopts = ["-pthread"],
	deps = [
		"@com_github_google_benchmark//:benchmark_main",
		"@com_stablecc_scclib//util:sccutillib",
		"@com_github_grpc_grpc//:grpc++",
		"@com_github_grpc_grpc//:grpc++_reflection",
		"//grpc/proto:scc_cc_grpc",
	]
)
